Added Metainformation (incoming transisitons)